# web_browser

./: CMakeLists.txt  README.md  WebBrowser_Chn.ts  build.sh  build_for_arm.sh  update_ts.sh
arm/: setup
arm/lib/: libQtCore.so.4  libQtDBus.so.4  libQtDeclarative.so.4  libQtNetwork.so.4  libQtScript.so.4  libQtScriptTools.so.4  libQtSql.so.4  libQtTest.so.4  libQtXml.so.4  libdbus-1.so.3.5.8  libfreetype.so.6  libstdc++.so.6  libts-0.0.so.0
arm/plugins/bearer/: libqconnmanbearer.prl  libqgenericbearer.prl  libqnmbearer.prl
arm/plugins/imageformats/: libqico.prl  libqtga.prl
arm/plugins/qmltooling/: libqmldbg_inspector.prl  libqmldbg_tcp.prl
arm/plugins/script/: libqtscriptdbus.prl
arm/plugins/sqldrivers/: libqsqlite.prl
arm/translations/: duokan_zh_CN.qm
cmake_modules/: enable_qt.cmake
common/: CMakeLists.txt  ImageManager.cpp  ImageManager.h  WindowsMetrics.cpp  WindowsMetrics.h  debug.h  languages.cpp  languages.h  singleton.h
drivers/KindleFiveWay/: CMakeLists.txt  fivewayplugin.cpp  fivewayplugin.h  kindlefiveway.cpp  kindlefiveway.h
drivers/KindleKeyboard/: CMakeLists.txt  keyboardplugin.cpp  keyboardplugin.h  kindlekeyboard.cpp  kindlekeyboard.h
drivers/KindleKeyboard/keymap/: CMakeLists.txt
drivers/KindleKeyboard/screenshot/: CMakeLists.txt  screenshot.c  screenshot.h
drivers/KindleTS/: CMakeLists.txt  kindlets.cpp  kindlets.h  touch_event.h  tsplugin.cpp
drivers/QKindleFb/: CMakeLists.txt  device.cpp  qkindlecursor.cpp  qkindlecursor.h  qkindlefb.cpp  qkindlefb.h  qkindlefbplugin.cpp
drivers/QKindleFb/linux/: einkfb.h  mxcfb.h
drivers/kermit/: CMakeLists.txt  kermit_screen.cpp  kermit_screen.h
drivers/qt_plugin/: qkbdlinuxinput_qws.cpp  qmouselinuxtp_qws.cpp  qmouselinuxtp_qws.h  qmousetslib_qws.cpp  qmousetslib_qws.h
drivers/screen/: CMakeLists.txt  duokan_screen.cpp  duokan_screen.h  duokan_screen_plugin.cpp
drivers/transformation/: CMakeLists.txt  qscreentransformed_qws.cpp
evernote_explorer/: CMakeLists.txt  evernote_application.cpp  evernote_application.h  main.cpp
evernote_explorer/sample/: evernote_token.xml  evernote_user.xml
framework/: CMakeLists.txt
framework/inc/: buttons.h  catalog_view.h  content_view.h  data.h  dialog.h  event_filter.h  factory.h  label.h  line_edit.h  list_widget.h  paginator.h  soft_shadow.h  text_layout.h  tree_view.h  utils.h
framework/src/: buttons.cpp  catalog_view.cpp  content_view.cpp  data.cpp  dialog.cpp  event_filter.cpp  factory.cpp  label.cpp  line_edit.cpp  list_widget.cpp  paginator.cpp  soft_shadow.cpp  text_layout.cpp  tree_view.cpp  utils.cpp
ime/: CMakeLists.txt  IMECangjie.cpp  IMEFanti.cpp  IMEFcitx.cpp  IMEFcitx.h  IMELatin.cpp  IMEManager.cpp  IMEManager.h  IMENumber.cpp  IMENumber.h  IMEPinyin.cpp  IMEWubi.cpp  main.cpp
ime/Fcitx/: rename.sh  stdafx.h
ime/ime_test/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/AES/: CMakeLists.txt  aes.c  aes.cpp  aes.h  base64.c  base64.h
libs/AES/test/: main.c  main.cpp
libs/Base/: CMakeLists.txt  base.h  base_model.cpp  base_model.h  base_tasks.h  dbus.h  device.h  tasks_handler.cpp  tasks_handler.h
libs/Database/: CMakeLists.txt  evernote_token.cpp  evernote_token.h  token_ring.cpp  token_ring.h  web_data.cpp  web_data.h  xiaomi_token.cpp  xiaomi_token.h  xml_utils.cpp  xml_utils.h
libs/Device/: CMakeLists.txt  DeviceInfo.cpp  device.cpp  device.h  fat.cpp  fat.h
libs/DkReader/: CMakeLists.txt
libs/Drivers/: CFbBitDc.cpp  CFbBitDc.h  CMakeLists.txt  DeviceInfo.cpp  frame_buffer_ioctl.h  frame_buffer_lib.cpp  frame_buffer_lib.h
libs/Evernote/: CMakeLists.txt  evernote_kindle_types.cpp  evernote_kindle_types.h  evernote_manager.cpp  evernote_manager.h  evernote_session.cpp  evernote_session.h  sample.xml
libs/Evernote/test/: test_export_note.cpp  test_import_xml.cpp  test_prepare_content.cpp
libs/FbLib/: CMakeLists.txt  DeviceInfo.cpp  DeviceInfo.h  frame_buffer_ioctl.h  frame_buffer_lib.cpp  frame_buffer_lib.h
libs/Gesture/: CMakeLists.txt  configuration.h  scale_gesture_detector.cpp  scale_gesture_detector.h
libs/NetworkService/: CMakeLists.txt  access_manager.cpp  access_manager.h  cookie_jar.cpp  cookie_jar.h  evernote_account_manager.cpp  evernote_account_manager.h  network_service_res.qrc  ns_utils.cpp  ns_utils.h  xiaomi_account_manager.cpp  xiaomi_account_manager.h  xiaomi_migration_manager.cpp  xiaomi_migration_manager.h
libs/Screen/: CMakeLists.txt  screen_proxy.cpp  screen_proxy.h  screen_update_watcher.cpp  screen_update_watcher.h
libs/System/: CMakeLists.txt
libs/System/inc/: moc_system_manager.cxx  screen_manager.h  system_manager.h
libs/System/screen/: screen_manager.cpp  screen_manager.h
libs/System/src/: screen_manager.cpp  system_manager.cpp
system_manager/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
translations/: duokan_zh_CN.ts
ui/: .DKLineEdit.h.swp  .ImageManager.cpp.swp  .WindowsMetrics.h.swp  CMakeLists.txt  DKButtonGroup.cpp  DKButtonGroup.h  DKLabel.cpp  DKLabel.h  DKLineEdit.cpp  DKLineEdit.h  DKListWidget.cpp  DKListWidget.h  DKMenu.cpp  DKMenu.h  DKPushButton.cpp  DKPushButton.h  DKSoftKeyboardIME.cpp  DKSoftKeyboardIME.h  DKToolBar.cpp  DKToolBar.h  ImageManager.cpp  ImageManager.h  WindowsMetrics.cpp  WindowsMetrics.h
web_browser/: .browser_mainwindow.cpp.swp  .browser_mainwindow.h.swp  CMakeLists.txt  CTestTestfile.cmake  Makefile  bookmark_model.cpp  bookmark_model.h  browser_mainwindow.cpp  browser_mainwindow.h  cmake_install.cmake  const_strings.cpp  const_strings.h  cursor_navigator.cpp  cursor_navigator.h  frame.cpp  frame.h  history_list_item.cpp  history_list_item.h  history_page.cpp  history_page.h  keyboard_dialog.cpp  keyboard_dialog.h  main.cpp  moc_frame.cxx  moc_keyboard_dialog.cxx  moc_page.cxx  moc_view.cxx  moc_web_application.cxx  page.cpp  page.h  res.qrc  url_lineedit.cpp  url_lineedit.h  view.cpp  view.h  web_application.cpp  web_application.h
web_browser/res/: WebBrowser_Chn.qm  load_fail.html  network_error.html  readability.js  readability.js.bak  readability1.5.1.js  readability1.7.1.js
(+52 files in other folders)
